# hardware_collection

./: README.md  pyproject.toml
configs/: config.yaml  zed_publisher.yaml
configs/zed_config/: 102_zed_left_cam.yaml  102_zed_right_cam.yaml
hardware_collection/camera/: camera.py  camera_depthai.py  camera_zed.py  camera_zed_sdk.py
hardware_collection/core/: abstract_hardware.py
hardware_collection/core/gello/: gello_control_demo.py
hardware_collection/gello/configurations/: usb-FTDI_USB__-__Serial_Converter_FT94EVRT-if00-port0.json
hardware_collection/gello/gello/agents/: gello_agent.py
hardware_collection/gello/gello/dynamixel/: driver.py
hardware_collection/gello/gello/robots/: dynamixel.py
hardware_collection/gello/scripts/: gello_get_offset.py
hardware_collection/hardware_node/: gello_node.py  zed_cam_node.py
hardware_collection/publisher/: zed_publisher.py
hardware_collection/test/: data_collection_demo.py
hardware_collection/test/configs/: config.yaml
hardware_collection/zed_config/: 102_zed_left_cam.yaml  102_zed_right_cam.yaml  102_zed_wrist_cam.yaml  zlc_config.yaml  zlc_config_template.yaml
test/: data_collection_demo.py  test_zed.py
