[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware_collection"
version = "0.1.0"
authors = [
    {name = "Xinkai Jiang", email = "xinkai.jiang@kit.edu"}
]

requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.5",
    "PyYAML>=6.0",
    "opencv-python>=4.5.0", # For camera-related operations
    "numpy>=1.21.0",        # For numerical computations
    "keyboard>=0.13.5",     # For handling keyboard input
    "depthai>=2.20.0",      # For DepthAI camera support
    "pyzed>=3.8.0",         # For ZED SDK integration
    "pyzlc"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hardware_collection*"]
exclude = ["configs*"]